# workshop-playwright-python

./: .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-release.yaml  ghcr-release.yaml  github-pages.yaml  scrape-visasq.yaml  test.yaml
.streamlit/: secrets.toml.example
docs/: index.md
scripts/: google_maps.py  load_context.py  locustfile.py  save_context.py  search_microsoft_com.py  visasq.py  visasq_scraper.py
search/: search_index.json
tests/: flags.py  test_core.py  test_hatena_bookmark.py  test_visasq.py
workshop_playwright_python/apps/: authentication.py  streamlit_authentication.py
