[project]
name = "workshop-playwright-python"
version = "0.0.1"
description = "A GitHub template repository for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "authlib>=1.5.2",
    "playwright>=1.52.0",
    "pytest-playwright>=0.7.0",
    "streamlit>=1.45.0",
    "streamlit-authenticator>=0.4.2",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.6.12",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.8.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D203"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
